# Project-1

./: .gitignore  AddAutomaton.h  CMakeLists.txt  ColonAutomaton.h  DataLogProgram.h  Database.h  Interpreter.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  main.cpp  makefile
Automatons/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemeAutomaton.cpp  SchemeAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h
